kubernetes/vault/vault-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.50.0/24, 83.10.135.2"
spec:
  rules:
  - host: vault.omni-rs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
  tls:
  - hosts:
    - vault.omni-rs.com
    secretName: omni-rs-com-tls-sub
