kubernetes/vault/vault-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-vault
  namespace: vault
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
